# libpostal-service

./: ##toDelAllZoneIdentifierFilesAtOnce.txt  Address_Normalization_Service_Design_Document.docx  README-SetupLibpostal.md  README.md  vm_runbook.md  vm_runbook_deployToVM.md
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/: CMakeLists.txt  Makefile  README.md  compile_commands.json  project_summary.md
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/config/: address-service.service
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/src/controllers/: AuthFilter.h  BatchController.cc  EnrichController copy.cc  EnrichController.cc  EnrichController.h  JwtAuthFilter.h  MetricsController.cc  ParseController copy.cc
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/src/models/: AddressModels.h
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/src/services/: ConfidenceScorer.cc  MetricsCollector.h  PreProcessor.h
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/src/utils/: InputValidator.h
1-20March-address-service-optimized-WorkingGudJsonBodyBkp/uploads/: debug_results.csv
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/: RUNnnnnnnnnnnnnnnnn.txt  cmake_install.cmake  project_summary.md
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/config/: config.json  prometheus.yml
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/src/: main.cc
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/src/controllers/: BatchController.cc  EnrichController.cc  HealthController.cc  JwtAuthFilter.cc
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/src/services/: CacheManager.h  PreProcessor.cc  RuleEngine.h
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/tests/: test_main.cc
2_20March-address-service-optimized-WorkingForJsonBodyNextAddNormalizedColINResult/uploads/: debug_results.json
4_address-service-optimized-addedgeoNamesAndDepVm/: CMakeLists.txt  GeoNames_Integration_Guide.md  GeoNames_VM_Deployment_Guide.md  OPTIMIZATIONS.md  run_guide.md
4_address-service-optimized-addedgeoNamesAndDepVm/config/: config.json
4_address-service-optimized-addedgeoNamesAndDepVm/src/: main.cc
4_address-service-optimized-addedgeoNamesAndDepVm/src/controllers/: ApiKeyFilter.cc  BatchController.cc  EnrichController.cc  EnrichController.h  GeoEnrichController.cc  GeoEnrichController.h  ParseController.cc
4_address-service-optimized-addedgeoNamesAndDepVm/src/models/: AddressModels.h
4_address-service-optimized-addedgeoNamesAndDepVm/src/services/: AddressParser copy.cc  AddressParser copy.h  AddressParser.cc  AddressParser.h  ConfidenceScorer.h  GeoNamesDB.cc  GeoNamesDB.h  LLMFallback.cc  RuleEngine.cc
4_address-service-optimized-addedgeoNamesAndDepVm/src/utils/: InputValidator copy.h  InputValidator.h
4_address-service-optimized-addedgeoNamesAndDepVm/tests/: test_cache.cc  test_confidence.cc
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/: CMakeCache.txt  GeoNames_VM_Deployment_Guide.md  Makefile  RUNnnnnnnnnnnnnnnnn.txt  api_bundle_for_vm.sh  compile_commands.json  vm_runbook_deployToVM.md  wsl_api_reference.md  wsl_setup_guide.md
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/src/: main.cc
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/src/controllers/: ApiKeyFilter.cc  ApiKeyFilter.h  AuthFilter.cc  BatchController.cc  EnrichController.cc  GeoEnrichLMDBController.cc  HealthController.cc  JwtAuthFilter.cc  MetricsController.cc  RefAbbreviationController.cc  RefAbbreviationController.h  RefCountryController.cc  RefCountryController.h  RefEnrichController.cc  RefStateController.h
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/src/services/: GeoNamesLMDB.cc  LLMFallback.h
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/src/utils/: Logger.h
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/tests/: test_preprocessor.cc
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/tools/: build_lmdb.cc  recOfFiles.txt
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeploy/uploads/: debug_results.json
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/: CMakeLists.txt  Dockerfile  GeoNames_Lmdb_APi_Ref_VM_Deployment_Guide.md  address-service  setup-phase1.sh  vm_runbook_deployToVM_setup.md  wsl_api_reference.md  wsl_setup_guide.md
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/config/: config.json
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/src/: main.cc
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/src/controllers/: EnrichController.h  (+9 more)
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/tests/: test_parser.cc  test_validator.cc
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/tools/: build_csv.py  build_lmdb
6-address-service-optimized -BKPPhase1,2,3,RemTextLoading-BeforeVMDeployed/uploads/: debug_results.csv
address-service/: CMakeLists.txt  RRRRRRUUUNN.txt
address-service-optimized/: CMakeCache.txt  CMakeLists.txt  Makefile  RUNnnnnnnnnnnnnnnnn.txt  docker-compose.yml
address-service-optimized/config/: nginx.conf
address-service/config/: config.json
address-service/src/: main.cc
address-service/src/controllers/: BatchController.cc  BatchController.h  HealthController.cc  MetricsController.h  ParseController.cc  ParseController.h
address-service/src/models/: AddressModels.h
address-service/src/services/: AddressParser.cc  AddressParser.h  CacheManager.cc  CacheManager.h  ConfidenceScorer.cc  MetricsCollector.cc  MetricsCollector.h  PreProcessor.cc  PreProcessor.h  RuleEngine.cc  RuleEngine.h
address-service/tests/: test_main.cc  test_rule_engine.cc
(+11 files in other folders)
